tests/checker/ok/wasi_http_types_load.can
main = () => Unit {
    Status(200) -> Print
}
