tests/checker/fail/hex_literal.can
Unit => Program {
    0xFF -> Print
}
